Fix missing margin

--- a/src/MudBlazor/Styles/components/_switch.scss
+++ b/src/MudBlazor/Styles/components/_switch.scss
@@ -5,7 +5,7 @@
   margin-left: -11px;
   margin-right: 0px;
   margin-inline-start: -11px;
-  margin-inline-end: 0px;
+  margin-inline-end: 16px;
   vertical-align: middle;
   -webkit-tap-highlight-color: transparent;
 
